--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,13 +1,13 @@
 name: 'doc'
-
-on:
-  push:
-  pull_request:
-
+on: [push, pull_request]
+env:
+  CI: true
 jobs:
   linux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: build doc
-      run: ./doc/make.sh
+    - uses: actions/checkout@v1
+    - run: ./doc/make.sh
+      env:
+        GH_DEPKEY: ${{ secrets.GH_DEPKEY }}
+        GH_SHA:    ${{ github.sha }}
