ci: run macOS 10.15 and 11.0

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -156,13 +156,16 @@ jobs:
   osx:
     strategy:
       fail-fast: false
-      max-parallel: 2
+      max-parallel: 4
       matrix:
+        os:
+        - '10.15'
+        - '11.0'
         backend:
         - mcode
         - llvm
-    runs-on: macOS-10.15
-    name: '🍎 macOS 10.15 · ${{ matrix.backend }}'
+    runs-on: macOS-${{ matrix.os }}
+    name: '🍎 macOS ${{ matrix.os }} · ${{ matrix.backend }}'
     steps:
 
     - name: '🧰 Checkout'
@@ -183,7 +186,7 @@ jobs:
       run: |
         PATH=$PWD/gnat/bin:$PATH
         ./scripts/ci-run.sh -c
-        mv ghdl-*.tgz ghdl-macos-10.15-${{ matrix.backend }}.tgz
+        mv ghdl-*.tgz ghdl-macos-${{ matrix.os }}-${{ matrix.backend }}.tgz
       env:
         TASK: macosx+${{ matrix.backend }}
         GITHUB_OS: ${{ runner.os }}
